frontend_tests/negative/unused_local/go.mod
module example.com/renvotests/negative/unused_local

go 1.25
